# lionreid_vit

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  run_all.sh
.claude/: settings.local.json
specs/: lionid_reimplementation.md
src/: ablation.py  cnn.py  dataset.py  evaluate.py  report.py  train.py  vit.py
